--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,32 +1,47 @@
 .friendList {
+    display: flex;
+    gap: 16px;   
     list-style: none;
     padding: 0;
     margin: 0;
+    
 }
 
 .friendItem {
     display: flex;
+    flex-direction: column;
     align-items: center;
     padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 2px solid #0e0d0d;
+    border-radius: 10px;
     margin-bottom: 10px;
+    width: 60px;
+
+    
+
 }
 
 .avatar {
-    border-radius: 50%;
-    margin-right: 10px;
+
+    
+    
 }
 
 .name {
-    margin: 0;
+    margin-left: 10px;
     margin-right: 10px;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 .online {
+    margin-top: 0;
+    margin-bottom: 0;
     color: green;
 }
 
 .offline {
+    margin-top: 0;
+    margin-bottom: 0;
     color: red;
 }
