--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,14 +1,16 @@
 body{
     background-color: aliceblue;
     flex-direction: column;
+    
 
 }
 .profile {
-    max-width: 300px;
+    width: 480px;
     margin: 0 auto;
-
+    margin-bottom: 30px;
+    
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
+    border-radius: 10px;
     text-align: center;
     background-color: white;
     border: 2px solid black;
@@ -63,6 +65,7 @@ body{
 .label {
     height: 40px;
     background-color: lightgray;
+    padding-top: 10px;
     
 }
 
