--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -4,28 +4,39 @@
   margin: 20px 0;
   font-size: 16px;
   text-align: left;
+ 
 }
 
 .thead {
   background-color: #f4f4f4;
   color: black;
+ 
 }
 
-.th, .td {
+.td {
   padding: 12px;
-  border: 1px solid #6f6d6d;
+  border: 1px solid #000000;
 color: black;
 
 }
+.th{
+  padding: 12px;
+    border: 1px solid #737272;
+    color: rgb(254, 254, 254);
+    text-align: center;
+    
+}
 
 .tbody tr:nth-child(odd) {
-  background-color: #a6a6a6;
+  background-color: #ffffff;
+  text-align: center;
 }
 
 .tbody tr:nth-child(even) {
-  background-color: #ffffff;
+  background-color: #c3bfbf;
+  text-align: center;
 }
 
 .th {
-  background-color: #7b7b7b;
+  background-color: #000000;
 }
